tests/ui/layout/enum-scalar-pair-int-ptr.stderr
error: backend_repr: ScalarPair(Initialized { value: Int(I?, false), valid_range: $VALID_RANGE }, Initialized { value: Pointer(AddressSpace(0)), valid_range: $VALID_RANGE })
  --> $DIR/enum-scalar-pair-int-ptr.rs:11:1
   |
LL | enum ScalarPairPointerWithInt {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: backend_repr: Memory { sized: true }
  --> $DIR/enum-scalar-pair-int-ptr.rs:20:1
   |
LL | enum NotScalarPairPointerWithSmallerInt {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

